--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,14 +34,12 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     container_name: frontend
     ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    command: npm run dev
+      - "80:80"
+    depends_on:
+      - backend
     restart: unless-stopped
 
   # PostgreSQL Database
