--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,26 @@
-# Этап 1: Сборка React-приложения
-FROM node:22-alpine as builder
+# --- Build stage ---
+FROM node:22-alpine AS build
+
+# Create app directory
 WORKDIR /app
+
+# Install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm ci --legacy-peer-deps
+
+# Copy source and build
 COPY . .
 RUN npm run build
 
-# Этап 2: Раздача статических файлов через Nginx
-FROM nginx:stable-alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
+# --- Production stage ---
+FROM nginx:1.25-alpine AS prod
+
+# Copy built assets
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
